data/derived/comb/progs/unify/prog3624.ml.out
Characters 35-55:
  List.map f (( sepConcat "" ) l);;
             ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         'a list
